--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     border: 0;
+    font-size: 18px;
+    color: white;
 }
 
 .location-form {
@@ -12,6 +14,11 @@ body {
     background-color: #ffd400;
     font-weight: bold;
     color: #000435;
+}
+
+.weather-information {
+    background-color: #000435;
+    height: 100vh;
 }
 
 .location {
@@ -26,4 +33,45 @@ body {
     height: 25px;
     width: 100px;
     font-weight: bold;
+}
+
+.current-output {
+    margin: auto;
+    text-align: center;
+    width: 400px;
+    padding: 10px;
+}
+
+#current-temperature {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 5px;
+}
+
+#current-date, #current-location, #current-feelslike, #todays-minmax, #current-precipitation {
+    font-size: 14px;
+}
+
+#todays-minmax, #minmax {
+    display: flex;
+    justify-content: space-between;
+    width: 150px;
+    margin: auto;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.weather-future {
+    width: 600px;
+    display: flex;
+    margin: auto;
+    text-align: center;
+    font-size: 14px;
+}
+
+.future-days {
+    padding: 10px;
+    width: 200px;
 }
