Added current weather image to DOM

--- a/src/style.css
+++ b/src/style.css
@@ -1,86 +1,95 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    border: 0;
-    font-size: 18px;
-    color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  border: 0;
+  font-size: 18px;
+  color: white;
 }
 
 .location-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-    background-color: #ffd400;
-    font-weight: bold;
-    color: #000435;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  background-color: #ffd400;
+  font-weight: bold;
+  color: #000435;
 }
 
 .weather-information {
-    background-color: #000435;
-    height: 100vh;
+  background-color: #000435;
+  height: 100vh;
 }
 
 .location {
-    height: 20px;
-    width: 200px;
+  height: 20px;
+  width: 200px;
 }
 
 .submit {
-    background-color: #000435;
-    color: white;
-    border-radius: 4px;
-    height: 25px;
-    width: 100px;
-    font-weight: bold;
+  background-color: #000435;
+  color: white;
+  border-radius: 4px;
+  height: 25px;
+  width: 100px;
+  font-weight: bold;
 }
 
 .current-output {
-    margin: auto;
-    text-align: center;
-    width: 400px;
-    padding: 10px;
+  margin: auto;
+  text-align: center;
+  width: 400px;
+  padding: 10px;
 }
 
 #current-temperature {
-    font-size: 36px;
-    font-weight: bold;
-    margin: 5px;
+  font-size: 36px;
+  font-weight: bold;
+  margin: 5px;
 }
 
-#current-date, #current-location, #current-feelslike, #todays-minmax, #current-precipitation {
-    font-size: 14px;
+#current-date,
+#current-location,
+#current-feelslike,
+#todays-minmax,
+#current-precipitation {
+  font-size: 14px;
 }
 
-#todays-minmax, .minmax {
-    display: flex;
-    justify-content: space-between;
-    width: 150px;
-    margin: auto;
+#todays-minmax,
+.minmax {
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+  margin: auto;
 }
 
 .bold {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .weather-future {
-    width: 600px;
-    display: flex;
-    margin: auto;
-    text-align: center;
-    font-size: 14px;
+  width: 600px;
+  display: flex;
+  margin: auto;
+  text-align: center;
+  font-size: 14px;
 }
 
 .future-days {
-    padding: 10px;
-    width: 200px;
+  padding: 10px;
+  width: 200px;
 }
 
 .loading {
-    text-align: center;
-    padding: 10px;
+  text-align: center;
+  padding: 10px;
 }
 
 .hidden {
-    display: none;
+  display: none;
+}
+
+.icon {
+  filter: invert(1);
 }
