--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ body {
 }
 
 #current-temperature {
-  font-size: 36px;
+  font-size: 54px;
   font-weight: bold;
   margin: 5px;
 }
@@ -68,6 +68,10 @@ body {
   font-weight: bold;
 }
 
+.weather-today {
+    padding-top: 50px;
+}
+
 .weather-future {
   width: 600px;
   display: flex;
@@ -83,7 +87,7 @@ body {
 
 .loading {
   text-align: center;
-  padding: 10px;
+  padding: 50px;
 }
 
 .hidden {
@@ -93,3 +97,4 @@ body {
 .icon {
   filter: invert(1);
 }
+
